--- a/trabalho da escola (1).html
+++ b/trabalho da escola (1).html
@@ -1,24 +1,6 @@
 <!DOCTYPE html>
     <html lang="en">
-        <style>
-            body {
-                background-color: burlywood;
-            }
-            header {
-                padding: 32px;
-                background-color: rgb(45, 44, 44);
-                border-bottom: 1px solid rgb(45, 44, 44);
-            }
-            * {
-                margin: 0;
-                padding: 0;
-                border: 0;
-            }
-            header div a {
-                text-decoration: none;
-                color: aliceblue;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,11 +8,18 @@
     </head>
     <body>
         <header>
+    
             <div>
                 <a href="">gitnub</a>
                 <a href="">instagram</a>
                 <a href="">linkedin</a>
             </div>
         </header>
+        <div id="box">
+            <img src="https://avatars.githubusercontent.com/u/160517752?v=4">
+            <H1>João Emanuel Leite Fortaleza</H1>
+            <h2>programador</h2>
+            <p>em precesso de obter experiencia</p>
+        </div>
     </body>
     </html>
